--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -10,9 +10,8 @@
     <h2>{{ intro.main }}</h2>
   </div>
   <div class="specials">
-    <p>Today's Soups: 3 Bean Chili, Clam Chowder, Lobster Bisque</p>
-    <p>Today's Specials: Tuna Casserole, Liver &amp; Onions, Grilled Brussel Sprouts &amp; Green Pea
-      puree</p>
+    <p>Today's Soups: {{ intro.soups }}</p>
+    <p>Today's Specials: {{ intro.specials }}</p>
   </div>
   <div class="legend">
     <div class="legend__item"><i>E</i><span>Eggs</span></div>
