--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,14 +1,43 @@
+{% set assetHash = global.random() %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="{{ metaDesc }}" />
+    <meta property="og:description" content="{{ metaDesc }}" />
+    <meta property="og:site_name" content="{{ siteTitle }}" />
+    <meta property="og:title" content="{{ pageTitle }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ currentUrl }}" />
     <title>{{ title }}</title>
+    <script src="https://cdn.typetura.com/typetura.js?apiKey="></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.typetura.com/madrid/typetura.css?apiKey=">
+    <link rel="canonical" href="{{ currentUrl }}" />
+    <style>{% include "css/critical.css" %}</style>
+    {# Add facility for pages to declare an array of critical styles #}
+    {% if pageCriticalStyles %}
+      {% for item in pageCriticalStyles %}
+        <style>{% include item %}</style>
+      {% endfor %}
+    {% endif %}
+
+    <link rel="stylesheet" media="print" href="/fonts/fonts.css?{{ assetHash }} onload="this.media='all'" />
+
+    {# Add facility for pages to declare an array of stylesheet paths #}
+    {% if pageStylesheets %}
+      {% for item in pageStylesheets %}
+        <link rel="stylesheet" media="print" href="{{ item }}?{{ assetHash }}" onload="this.media='all'" />
+      {% endfor %}
+    {% endif %}
   </head>
   <body>
     {% include "partials/site-head.html" %}
-    
+    <main tabindex="-1" id="main-content">
     {% block content %}{% endblock %}
+    </main>
+    {% include "partials/site-foot.html" %}
   </body>
 </html>
