--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -13,8 +13,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ currentUrl }}" />
     <title>{{ title }}</title>
-    <!-- <script src="https://cdn.typetura.com/typetura.js?apiKey="></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.typetura.com/madrid/typetura.css?apiKey="> -->
+    <script src="https://cdn.typetura.com/typetura.js?apiKey="></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.typetura.com/madrid/typetura.css?apiKey=">
     <link rel="canonical" href="{{ currentUrl }}" />
     <style>{% include "css/critical.css" %}</style>
     {# Add facility for pages to declare an array of critical styles #}
