--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -5,11 +5,11 @@
       <img src="{{ intro.image }}" alt="{{ intro.imageAlt }}" />
     </a>
   </div>
-  <h1 class="hours">{{ intro.eyebrow }}</h1>
+  <h1 class="primary-headline">{{ intro.eyebrow }}</h1>
   <div class="location">
     <h2>{{ intro.main }}</h2>
   </div>
-  <div class="specials">
+  <div class="section-subheadline">
     <p>Today's Soups: {{ intro.soups }}</p>
     <p>Today's Specials: {{ intro.specials }}</p>
   </div>
