Better leverage Typetura styles

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -7,7 +7,7 @@
     {% include "partials/miscellaneous.html" %}
     {{ content | safe }}
 
-    <button class="menu-download"><a href="#">Download Our Menu</a></button>
+    <button class="menu-download primary-headline"><a href="#">Download Our Menu</a></button>
   </div>
   <section id="others">
     <p>Please inform someone of any other food allergies that someone in your party may have. Thank
