Some chnges to typography for Typetura defaults.

--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -5,7 +5,7 @@
       <img src="{{ intro.image }}" alt="{{ intro.imageAlt }}" />
     </a>
   </div>
-  <h1 class="primary-headline">{{ intro.eyebrow }}</h1>
+  <h1 class="primary-subheadline">{{ intro.eyebrow }}</h1>
   <div class="location">
     <h2>{{ intro.main }}</h2>
   </div>
@@ -13,13 +13,13 @@
     <p>Today's Soups: {{ intro.soups }}</p>
     <p>Today's Specials: {{ intro.specials }}</p>
   </div>
-  <div class="legend">
-    <div class="legend__item"><i>E</i><span>Eggs</span></div>
-    <div class="legend__item"><i>D</i><span>Dairy</span></div>
-    <div class="legend__item"><i>W</i><span>Wheat</span></div>
-    <div class="legend__item"><i>Y</i><span>Soy</span></div>
-    <div class="legend__item"><i>F</i><span>Fish</span></div>
-    <div class="legend__item"><i>S</i><span>Shellfish</span></div>
-    <div class="legend__item"><i>N</i><span>Nuts</span></div>
-  </div>
+  <ul class="legend">
+    <li class="legend__item"><i>E</i><span class="big">Eggs</span></li>
+    <li class="legend__item"><i>D</i><span class="big">Dairy</span></li>
+    <li class="legend__item"><i>W</i><span class="big">Wheat</span></li>
+    <li class="legend__item"><i>Y</i><span class="big">Soy</span></li>
+    <li class="legend__item"><i>F</i><span class="big">Fish</span></li>
+    <li class="legend__item"><i>S</i><span class="big">Shellfish</span></li>
+    <li class="legend__item"><i>N</i><span class="big">Nuts</span></li>
+  </ul>
 </header>
