--- a/src/scss/blocks/_site-main.scss
+++ b/src/scss/blocks/_site-main.scss
@@ -1,6 +1,6 @@
-section#others {
-  font-family: 'Open Sans';
-}
+// section#others {
+//   font-family: 'Open Sans';
+// }
 
 span.warning {
   color: #0b132b;
