--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -83,7 +83,7 @@ html {
 }
 
 body {
-  // font-size: 1.4rem;
+  font-size: 1.4rem;
   min-height: 100vh;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
