--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -22,30 +22,29 @@ header {
   }
 }
 
-h1.primary-headline {
+h1.primary-subheadline {
   grid-column: span 3;
   color: #563c1f;
   background: hsla(60, 33%, 99%, 1.0);
-  padding: 1rem 1.6rem 0 1.6rem;
+  padding: 2.4rem 1.6rem 0 1.6rem;
   text-transform: uppercase;
   text-align: center;
-  --tt-max: 6000;
 }
 
 @media (min-width: 550px) {
-  h1.primary-headline {
+  h1.primary-subheadline {
     grid-column: span 2;
   }
 }
 
 @media (min-width: 880px) {
-  h1.primary-headline {
+  h1.primary-subheadline {
     grid-column: span 1;
   }
 }
 
 // @media (min-width: 1200px) {
-//   h1.primary-headline {
+//   h1.primary-subheadline {
     
 //   }
 // }
@@ -170,13 +169,11 @@ span.allergen.nuts {
   padding: 1rem 0;
 }
 
-.legend__item span {
+.legend__item span.big {
   display: inline-block;
   height: 30px;
   text-transform: uppercase;
   font-weight: 500;
-  font-size: 1.7rem;
-  line-height: 1.6;
   padding: 2px 12px 6px 12px;
   flex: auto;
 }
@@ -186,10 +183,9 @@ span.allergen.nuts {
   width: 30px;
   height: 30px;
   font-family: 'Crimson Pro', sans-serif;
-  font-size: 1.7rem;
   font-weight: 400;
   text-align: center;
-  line-height: 1.6;
+  line-height: 2.2;
   color: hsla(255, 100%, 100%, 1.0);
   border-radius: 50%;
 }
