--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -6,13 +6,14 @@
     </a>
   </div>
   <h1 class="primary-subheadline">{{ intro.eyebrow }}</h1>
-  <div class="location">
+  <div class="location section-subheadline">
     <h2>{{ intro.main }}</h2>
   </div>
   <div class="specials">
     <p class="big">Today's Soups: {{ intro.soups }}</p>
     <p class="big">Today's Specials: {{ intro.specials }}</p>
   </div>
+
   <ul class="legend">
     <li class="legend__item"><i>E</i><span class="big">Eggs</span></li>
     <li class="legend__item"><i>D</i><span class="big">Dairy</span></li>
