--- a/src/scss/blocks/_site-foot.scss
+++ b/src/scss/blocks/_site-foot.scss
@@ -26,11 +26,11 @@ footer .social-item i {
 }
 
 footer .social-item:nth-child(1) {
-  color: hsla(224, 55%, 42%, 1.0);
+  color: #3050a6;
 }
 
 footer .social-item:nth-child(1) i {
-  background: hsla(224, 55%, 42%, 1.0);
+  background: #3050a6;
 }
 
 footer .social-item:nth-child(2) {
