--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -22,9 +22,37 @@ header {
   }
 }
 
+h1.primary-subheadline {
+  grid-column: 2;
+  color: #563c1f;
+  background: #fdfdfc;
+  text-transform: uppercase;
+  padding: 2rem 1.6rem 0 1.6rem;
+  display: grid;
+  text-align: center;
+}
+
+@media (min-width: 550px) {
+  h1.hours {
+    grid-column: span 2;
+  }
+}
+
+@media (min-width: 880px) {
+  h1.hours {
+    grid-column: span 1;
+  }
+}
+
+@media (min-width: 1200px) {
+  h1.hours {
+    font-size: 3.6rem;
+  }
+}
+
 .location {
   grid-column: 1 / -1;
-  background: hsla(60, 33%, 99%, 1.0);
+  background: #fdfdfc;
   color: #0b132b;
   text-align: center;
 }
@@ -48,7 +76,8 @@ header {
 
 /*** Special Announcements ***/
 
-.specials { // Use semantic class names based on what you are doing with the text.
+.specials {
+  // Use semantic class names based on what you are doing with the text.
   background-color: #f8c954;
   border: 6px solid #0b132b;
   border-width: 6px 0 6px;
@@ -100,13 +129,13 @@ span.allergen.nuts {
 }
 
 .legend {
-  background: hsla(60, 33%, 99%, 1.0);
+  background: #fdfdfc;
   flex-direction: row;
 }
 
 @media (min-width: 880px) {
   .legend {
-    background-color: hsla(255, 100%, 100%, 1.0);
+    background-color: #ffffff;
     display: flex;
     flex-wrap: wrap;
     grid-column: 1 / 4;
