--- a/src/_includes/partials/lunch.html
+++ b/src/_includes/partials/lunch.html
@@ -2,7 +2,7 @@
 <h4>{{ lunch.summary }}</h4>
 <div class="item">
   <div class="item__wrapper">
-    {% for item in collections.lunch %}
+    {% for item in lunchMenu.cold_sandwiches %}
     <div class="item__name">{{ item.name }}</div>
     <div class="item__description">{{ item.description }}
     </div>
