--- a/src/_includes/partials/lunch.html
+++ b/src/_includes/partials/lunch.html
@@ -1,26 +1,19 @@
 <h3>{{ lunch.title }}</h3>
 <h4>{{ lunch.summary }}</h4>
+{% for item in lunchMenu.cold_sandwiches %}
 <div class="item">
   <div class="item__wrapper">
-    {% for item in lunchMenu.cold_sandwiches %}
     <div class="item__name">{{ item.name }}</div>
-    <div class="item__description">{{ item.description }}
-    </div>
-    <div class="item__prepared">{{ item.prepared }}</div>
     <div class="item__price">{{ item.price }}</div>
+    <div class="item__description">{{ item.description }}
+    <div class="item__prepared">{{ item.prepared }}</div>
     <div class="item__allergens">
-      <span class="allergen dairy">{{ item.allergen.dairy }}</span>
-      <span class="allergen eggs">{{ item.allergen.eggs }}</span>
+      {% for allergen in wrap.allergens %}
+      <span class="allergen {{ allergen }}">{{ allergen | check }}</span>
+      {% endfor %}
     </div>
-    {% endfor %}
 
     <h4>{{ lunch.summarySix }}</h4>
     <h4>{{ lunch.summarySeven }}</h4>
   </div>
-
-  <div class="sides">
-    
-    <h3 class="sidebar">{{ lunch.summaryEight }}</h3>
-    <h3 class="sidebar">{{ lunch.summaryNine }}</h3>
-  </div>
-  
+</div>
