--- a/src/_includes/partials/breakfast.html
+++ b/src/_includes/partials/breakfast.html
@@ -1,6 +1,6 @@
 <div class="entrees">
   <h3 class="section-headline">{{ breakfast.title }}</h3>
-  <h4 class="section-headline">{{ breakfast.summary }}</h4>
+  <h4 class="primary-subheadline">{{ breakfast.summary }}</h4>
   {% for wrap in breakfastMenu.wraps %}
   <div class="item">
     <div class="item__wrapper">
