--- a/src/_includes/partials/miscellaneous.html
+++ b/src/_includes/partials/miscellaneous.html
@@ -1,7 +1,7 @@
 <div class="sides">
-  <h3 class="sidebar">{{ lunch.summaryEight }}</h3>
-  <h3 class="sidebar">{{ lunch.summaryNine }}</h3>
-  <h3 class="sidebar">{{ miscellaneous.summaryTen }}</h3>
+  <h3 class="primary-subheadline">{{ lunch.summaryEight }}</h3>
+  <h3 class="primary-subheadline">{{ lunch.summaryNine }}</h3>
+  <h3 class="primary-subheadline">{{ miscellaneous.summaryTen }}</h3>
   <div class="item">
     <div class="item__wrapper">
       <div class="item__name">{{ item.name }}</div>
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <h3 class="sidebar">{{ miscellaneous.summaryEleven }}</h3>
+  <h3 class="primary-subheadline">{{ miscellaneous.summaryEleven }}</h3>
   <div class="item">
     <div class="item__wrapper">
       <div class="item__name">{{ item.name }}</div>
