--- a/src/scss/blocks/_site-main.scss
+++ b/src/scss/blocks/_site-main.scss
@@ -154,8 +154,8 @@ em.or {
 
 @media (min-width: 1200px) {
   .entrees .item {
-    // display: flex;
-    // align-items: center;
+    display: flex;
+    align-items: center;
     padding: 1rem;
   }
 
