Added empty arrays to situate menu items, Typetura styling changes.

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -104,7 +104,7 @@
   </div>
 
   <div class="sides">
-    <h3 class="sidebar big">{{ breakfast.summaryFour }}</h3>
+    <h3 class="sidebar section-subheadline">{{ breakfast.summaryFour }}</h3>
       {% for good in misc.baked_goods %}
       <div class="item">
         <div class="item__wrapper">
