Added empty arrays to situate menu items, Typetura styling changes.

--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -1,4 +1,4 @@
-<a class="[ skip-link ] [ button ]" href="#main-content">Skip to Content</a>
+<a class="sr-only" href="#main-content">Skip to Content</a>
 <header>
   <div class="logo">
     <a href="/" aria-label="{{ site.name }} - Home" class="site-head__brand">
