--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -90,10 +90,11 @@ span.allergen {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: 36px;
+  height: 36px;
+  border: 3px solid #000;
   text-align: center;
-  font: 800 2.5rem 'Crimson Pro';
+  font: 900 1.5rem 'Crimson Pro';
   color: #fff;
   border-radius: 50%;
   line-height: 1.9;
