--- a/src/scss/blocks/_site-main.scss
+++ b/src/scss/blocks/_site-main.scss
@@ -17,6 +17,25 @@ h3 {
 h3.sidebar {
   background: hsla(43, 92%, 65%, 1.0);
   color: #0b132b;
+  --tt-key: sidebar;
+  --tt-max: 350;
+  --tt-ease: ease-out;
+}
+
+@keyframes sidebar {
+  0% {
+    font-size: 1rem;
+  }
+
+  100% {
+    font-size: 1.75rem;
+  }
+}
+
+h4.section-subheadline {
+  font-size: 2.25rem;
+  margin-top: 0;
+  --tt-key: none;
 }
 
 @media (min-width: 550px) {
@@ -56,6 +75,7 @@ h4 {
   display: grid;
   grid-template-columns: 1fr min-content;
   grid-column-gap: 8px;
+  font-size: 1.25rem;
 }
 
 .item__filler {
@@ -67,7 +87,6 @@ h4 {
 .item__price {
   grid-row: 1;
   grid-column: 2;
-  font-weight: 400;
 }
 
 .item__description {
@@ -91,6 +110,7 @@ h4 {
 .item__price {
   text-transform: uppercase;
   margin: 0.5rem 0;
+  font-weight: 900;
 }
 
 .extras {
@@ -138,6 +158,7 @@ em.or {
 
   .entrees h3 {
     grid-column: 1 / -1;
+    margin-top: 0;
   }
 }
 
@@ -198,6 +219,12 @@ em.or {
 
 .sides h3 {
   margin-bottom: 0.8rem;
+  margin-top: 0;
+  line-height: 3.6rem;
+}
+
+#others {
+  grid-column: 1 / 10;
 }
 
 .tarts {
