Latest round of styling changes for social media, mobile, and typography.

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -187,6 +187,7 @@
     </div>
 
     <button class="menu-download"><a href="#">{{ intro.buttonText }}</a></button>
+    <button class="order-online"><a href="#">{{ intro.orderOnline }}</a></button>
 
     <section id="others">
       <p>{{ others.inform }}</p>
