--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -1,8 +1,8 @@
 <footer>
   <p>Find us online!
     <a class="social-item" href="https://facebook.com/downtowngrillecafenh/"><i
-        class="icon-social-facebook icons">f</i></a>
+        class="icon-social-facebook icons primary-subheadline">f</i></a>
     <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/"><i
-        class="icon-social-instagram icons">i</i></a>
+        class="icon-social-instagram icons primary-subheadline">i</i></a>
   </p>
 </footer>
