--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -23,18 +23,29 @@ header {
 }
 
 h1.primary-subheadline {
-  grid-column: 2;
+  grid-column: 2 / 4;
   color: #563c1f;
   background: #fdfdfc;
   text-transform: uppercase;
   padding: 2rem 1.6rem 0 1.6rem;
-  display: grid;
   text-align: center;
 }
 
-@media (min-width: 550px) {
+@media (min-width: 550px) and (max-width: 768px) {
+  h1.primary-subheadline {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
   h1.hours {
     grid-column: span 2;
+  }
+}
+
+@media (min-width: 768px) {
+  h1.primary-subheadline {
+    grid-column: 2;
+    grid-row: 1;
   }
 }
 
@@ -61,6 +72,7 @@ h1.primary-subheadline {
   .location {
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   .location p:nth-child(1) {
@@ -112,25 +124,24 @@ span.allergen.wheat {
   background: #103aad;
 }
 
-span.allergen.soy {
+span.allergen.fish {
   background: #008000;
 }
 
-span.allergen.fish {
-  background: #cc9933;
-}
-
-span.allergen.sea {
-  background: #4d0085;
-}
-
 span.allergen.nuts {
-  background: #a62b2b;
+  background: #4d0085;
 }
 
 .legend {
   background: #fdfdfc;
   flex-direction: row;
+}
+
+@media (min-width: 320px) and (max-width: 375px) {
+  ul.legend {
+    display: block;
+    place-self: center;
+  }
 }
 
 @media (min-width: 880px) {
@@ -145,7 +156,6 @@ span.allergen.nuts {
 
 .legend__item {
   display: flex;
-  flex: 1;
   padding: 1rem 0;
 }
 
@@ -154,7 +164,7 @@ span.allergen.nuts {
   height: 30px;
   text-transform: uppercase;
   font-weight: 500;
-  padding: 2px 12px 6px 12px;
+  padding: 2px 5px 6px 5px;
   flex: auto;
 }
 
