Added API Key for Typetura package.

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ currentUrl }}" />
     <title>{{ title }}</title>
-    <script src="https://cdn.typetura.com/typetura.js?apiKey="></script>
+    <script src="https://cdn.typetura.com/typetura.js?apiKey=K1Z0TK7-9134RZN-KRW776A-KBG4YCQ"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.typetura.com/madrid/typetura.css?apiKey=">
     <link rel="canonical" href="{{ currentUrl }}" />
     <style>{% include "css/critical.css" %}</style>
