Disable buttons for time being.

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -7,8 +7,8 @@
     {% include "partials/miscellaneous.html" %}
     {{ content | safe }}
 
-    <!-- <button class="menu-download button"><a href="#">Download Our Menu</a></button>
-    <button class="order-online button"><a href="#">Order Online</a></button> -->
+    <button class="menu-download button"><a href="#">Download Our Menu</a></button>
+    <button class="order-online button"><a href="#">Order Online</a></button>
   </div>
   <section id="others">
     <p>Please inform someone of any other food allergies that someone in your party may have. Thank
