--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -186,8 +186,8 @@
       {% endfor %}
     </div>
 
-    <button class="menu-download"><a href="#">{{ intro.buttonText }}</a></button>
-    <button class="order-online"><a href="#">{{ intro.orderOnline }}</a></button>
+    <!-- <button class="menu-download"><a href="#">{{ intro.buttonText }}</a></button>
+    <button class="order-online"><a href="#">{{ intro.orderOnline }}</a></button> -->
 
     <section id="others">
       <p>{{ others.inform }}</p>
