--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="{{ currentUrl }}" />
     <title>{{ title }}</title>
     <script src="https://cdn.typetura.com/typetura.js?apiKey=K1Z0TK7-9134RZN-KRW776A-KBG4YCQ"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.typetura.com/madrid/typetura.css?apiKey=">
+    <link rel="stylesheet" type="text/css" href="https://cdn.typetura.com/madrid/typetura.css?apiKey=K1Z0TK7-9134RZN-KRW776A-KBG4YCQ">
     <link rel="canonical" href="{{ currentUrl }}" />
     <style>{% include "css/critical.css" %}</style>
     {# Add facility for pages to declare an array of critical styles #}
