Updated Level 1 heading.

--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -5,7 +5,7 @@
       <img src="{{ intro.image }}" alt="{{ intro.imageAlt }}" />
     </a>
   </div>
-  <h1 class="primary-subheadline">{{ intro.eyebrow }}</h1>
+  <h1 class="primary-headline">{{ intro.eyebrow }}</h1>
   <div class="location section-subheadline">
     <h2>{{ intro.main }}</h2>
   </div>
