Footer social icon changes. Addition of svg icons.

--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -1,8 +1,21 @@
 <footer>
   <p>Find us online!
-    <a class="social-item" href="https://facebook.com/downtowngrillecafenh/"><i
-        class="icon-social-facebook icons primary-headline">f</i></a>
-    <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/"><i
-        class="icon-social-instagram icons primary-headline">i</i></a>
+    <a class="social-item" href="https://facebook.com/downtowngrillecafenh/">
+      <i
+        class="icon-social-facebook icons primary-headline">
+          <svg class="icon icon-facebook">
+            <use xlink:href="#icon-facebook"></use>
+          </svg>
+          <span class="mls"></span>
+      </i>
+    </a>
+    <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/">
+      <i class="icon-social-instagram icons primary-headline">
+        <svg class="icon icon-instagram">
+          <use xlink:href="#icon-instagram"></use>
+        </svg>
+        <span class="mls"></span>
+      </i>
+    </a>
   </p>
 </footer>
