Footer social icon changes. Addition of svg icons.

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -39,6 +39,6 @@
     {% block content %}{% endblock %}
     </main>
     {% include "partials/site-foot.html" %}
-    <script src="./js/svgxuse.js" async defer></script>
+    <script src="../js/svgxuse.js" async defer></script>
   </body>
 </html>
