--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -15,6 +15,10 @@
     <title>{{ title }}</title>
     <script src="https://cdn.typetura.com/typetura.js?apiKey=K1Z0TK7-9134RZN-KRW776A-KBG4YCQ"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.typetura.com/madrid/typetura.css?apiKey=K1Z0TK7-9134RZN-KRW776A-KBG4YCQ">
+    <link rel="stylesheet"
+      href="https://i.icomoon.io/public/temp/971c5a24f1/DowntownGrilleCafe/style-svg.css">
+    <script defer
+      src="https://i.icomoon.io/public/temp/971c5a24f1/DowntownGrilleCafe/svgxuse.js"></script>
     <link rel="canonical" href="{{ currentUrl }}" />
     <style>{% include "css/critical.css" %}</style>
     {# Add facility for pages to declare an array of critical styles #}
