--- a/css/critical.css
+++ b/css/critical.css
@@ -326,6 +326,9 @@ span.allergen.nuts {
 .legend {
   background: #fdfdfc;
   flex-direction: row;
+}
+
+ul.legend {
   padding: 0 1rem;
 }
 
@@ -333,7 +336,7 @@ span.allergen.nuts {
   ul.legend {
     display: grid;
     place-self: center;
-    grid-column: 2/4
+    grid-column: 2/4;
   }
 }
 
