--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -3,7 +3,7 @@
     <a class="social-item" href="https://facebook.com/downtowngrillecafenh/">
       <i
         class="icon-social-facebook icons primary-headline">
-          <svg class="icon icon-facebook">
+          <svg class="icon icon-facebook" role="img" aria-label="The Facebook icon which is the letter F">
             <use xlink:href="#icon-facebook"></use>
           </svg>
           <span class="mls"></span>
@@ -11,7 +11,7 @@
     </a>
     <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/">
       <i class="icon-social-instagram icons primary-headline">
-        <svg class="icon icon-instagram">
+        <svg class="icon icon-instagram" role="img" aria-label="The Instagram icon which looks like a Polaroid camera">
           <use xlink:href="#icon-instagram"></use>
         </svg>
         <span class="mls"></span>
