--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -1,6 +1,6 @@
 <footer>
   <p>Find us online!
-    <a class="social-item" href="https://facebook.com/downtowngrillecafenh/">
+    <a class="social-item" href="https://facebook.com/downtowngrillecafenh/" aria-label="A link to the DowntownGrille Cafe Facebook page.">
       <i
         class="icon-social-facebook icons primary-headline">
           <svg class="icon icon-facebook" role="img" aria-label="The Facebook icon which is the letter F">
@@ -9,7 +9,7 @@
           <span class="mls"></span>
       </i>
     </a>
-    <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/">
+    <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/" aria-label="A link to the DowntownGrille Cafe Instagram page.">
       <i class="icon-social-instagram icons primary-headline">
         <svg class="icon icon-instagram" role="img" aria-label="The Instagram icon which looks like a Polaroid camera">
           <use xlink:href="#icon-instagram"></use>
