--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -43,5 +43,6 @@
     {% block content %}{% endblock %}
     </main>
     {% include "partials/site-foot.html" %}
+    <script src="../js/svgxuse.js" async defer></script>
   </body>
 </html>
