--- a/css/critical.css
+++ b/css/critical.css
@@ -917,6 +917,8 @@ h4 {
 
 .icon {
   display: inline-block;
+  width: 50%;
+  height: 100%;
   stroke-width: 0;
   stroke: currentColor;
   fill: currentColor
