--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -4,7 +4,7 @@
       <i
         class="icon-social-facebook icons primary-headline">
           <svg class="icon icon-facebook" role="img" aria-label="The Facebook icon which is the letter F">
-            <use xlink:href="#icon-facebook"></use>
+            <use xlink:href="/img/symbol-defs.svg#icon-facebook"></use>
           </svg>
           <span class="mls"></span>
       </i>
@@ -12,7 +12,7 @@
     <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/" aria-label="A link to the DowntownGrille Cafe Instagram page.">
       <i class="icon-social-instagram icons primary-headline">
         <svg class="icon icon-instagram" role="img" aria-label="The Instagram icon which looks like a Polaroid camera">
-          <use xlink:href="#icon-instagram"></use>
+          <use xlink:href="/img/symbol-defs.svg#icon-instagram"></use>
         </svg>
         <span class="mls"></span>
       </i>
