Addressed Chrome issue with SVG icons in footer.

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -43,6 +43,6 @@
     {% block content %}{% endblock %}
     </main>
     {% include "partials/site-foot.html" %}
-    <script src="../js/svgxuse.js" async defer></script>
+    <link rel="preload" as="script" href="{{ '../svgxuse.min.js' | url }}" defer></script>
   </body>
 </html>
