--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -4,14 +4,18 @@
       <i
         class="icon-social-facebook icons primary-headline">
           <svg class="icon icon-facebook" role="img" aria-label="The Facebook icon which is the letter F">
-            <use xlink:href="/img/symbol-defs.svg#icon-facebook"></use>
+            <title>A link to the DowntownGrille Facebook page</title>
+            <desc id="facebook">A letter F.</desc>
+            <use href="/img/symbol-defs.svg#icon-facebook" alt="The Facebook icon which is the letter F"></use>
           </svg>
       </i>
     </a>
     <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/" aria-label="A link to the DowntownGrille Cafe Instagram page.">
       <i class="icon-social-instagram icons primary-headline">
         <svg class="icon icon-instagram" role="img" aria-label="The Instagram icon which looks like a Polaroid camera">
-          <use xlink:href="/img/symbol-defs.svg#icon-instagram"></use>
+          <title>A link to the DowntownGrille Instagram page</title>
+          <desc id="facebook">A Polaroid camera.</desc>
+          <use href="/img/symbol-defs.svg#icon-instagram" alt="The Instagram icon which looks like a Polaroid camera"></use>
         </svg>
       </i>
     </a>
