Added fallback for social icons.

--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -6,18 +6,18 @@
           <svg class="icon icon-facebook" role="img" aria-label="The Facebook icon which is the letter F">
             <title>A link to the DowntownGrille Facebook page</title>
             <desc id="facebook">A letter F.</desc>
-            <use href="/img/symbol-defs.svg#icon-facebook" alt="The Facebook icon which is the letter F"></use>
+            <use href="/img/symbol-defs.svg#icon-facebook" alt="The Facebook icon which is the letter F">F</use>
           </svg>
-      F</i>
+      </i>
     </a>
     <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/" aria-label="A link to the DowntownGrille Cafe Instagram page.">
       <i class="icon-social-instagram icons primary-headline">
         <svg class="icon icon-instagram" role="img" aria-label="The Instagram icon which looks like a Polaroid camera">
           <title>A link to the DowntownGrille Instagram page</title>
-          <desc id="facebook">A Polaroid camera.</desc>
-          <use href="/img/symbol-defs.svg#icon-instagram" alt="The Instagram icon which looks like a Polaroid camera"></use>
+          <desc id="instagram">A Polaroid camera.</desc>
+          <use href="/img/symbol-defs.svg#icon-instagram" alt="The Instagram icon which looks like a Polaroid camera">I</use>
         </svg>
-      I</i>
+      </i>
     </a>
   </p>
 </footer>
