--- a/src/_includes/partials/miscellaneous.html
+++ b/src/_includes/partials/miscellaneous.html
@@ -13,6 +13,8 @@
   <h3 class="primary-subheadline">{{ miscellaneous.summaryEleven }}</h3>
   <div class="item">
     <div class="item__wrapper">
+      <h4>Iced Coffee (one size)</h4>
+      <h4>Hot Coffee (S, M, L, XL)</h4>
       <div class="item__name">{{ item.name }}</div>
       <div class="item__description">{{ item.description }}</div>
       <div class="item__price">{{ item.price }}</div>
