Added sizes to lattes and prices.

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -186,6 +186,14 @@
       {% endfor %}
     </div>
 
+    <div class="extras">
+      <p>
+        {% for dressing in misc.price-by-sizes %}
+        {{ price-by-sizes }}
+        {% endfor %}
+      </p>
+    </div>
+
     <!-- <button class="menu-download"><a href="#">{{ intro.buttonText }}</a></button>
     <button class="order-online"><a href="#">{{ intro.orderOnline }}</a></button> -->
 
