Added sizes to lattes and prices.

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -186,7 +186,7 @@
       {% endfor %}
 
       <div class="extras">
-        <p>{{ miscellaneous.summaryFourteen }}:
+        <p>{{ miscellaneous.summaryFifteen }}:
           {% for dressing in misc.price-by-sizes %}
           {{ price-by-sizes }}
           {% endfor %}
