Added sizes to lattes and prices.

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -177,8 +177,8 @@
     <h3 class="sidebar">{{ miscellaneous.summaryEleven }}</h3>
       <div class="extras">
         <p>{{ miscellaneous.summaryFifteen }}:
-          {% for dressing in misc.price-by-sizes %}
-          {{ price-by-sizes }}
+          {% for dressing in misc.prices_by_sizes %}
+          {{ prices_by_sizes }}
           {% endfor %}
         </p>
       </div>
